--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
             </section>
         </main>
     </div>
+<script src="auth.js"></script>
+    <script src="database.js"></script>
+    <script src="api-bridge.js"></script>
+
+    <script src="script.js"></script> 
+</body>
+</html>
 
     <script src="script.js"></script>
 </body>
