--- a/index.html
+++ b/index.html
@@ -4,31 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Speed | نظام إدارة التوصيل</title>
+    
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#0f172a">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700;900&family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
     <style>
         body { font-family: 'Tajawal', sans-serif; background-color: #f8fafc; margin: 0; }
-        #mainSystem { display: none; } /* إخفاء النظام في البداية */
+        #mainSystem { display: none; }
+        /* تحسين مظهر الجدول في الشاشات الصغيرة */
+        @media (max-width: 768px) {
+            .table-container { overflow-x: auto; }
+            aside { display: none; } /* إخفاء القائمة الجانبية في الموبايل */
+        }
     </style>
 </head>
 <body class="overflow-hidden">
 
     <div id="loaderWrapper" class="fixed inset-0 z-50 flex flex-col justify-center items-center bg-[#050505]">
         <div class="grid-overlay"></div>
-        <div class="loader-container" id="loaderContainer">
+        <div class="loader-container">
             <div class="spinner-box">
                 <div class="circle-border ring-1"></div>
                 <div class="circle-border ring-2"></div>
                 <div class="circle-border ring-3"></div>
                 <div class="percentage" id="counter">0%</div>
-                <div class="status-text" id="status">System Boot</div>
+                <div class="status-text" id="status">System Booting...</div>
             </div>
         </div>
     </div>
 
-    <div id="mainSystem" class="h-screen flex">
+    <div id="mainSystem" class="h-screen flex flex-col md:flex-row">
         <aside class="w-64 bg-[#0f172a] text-white flex flex-col hidden md:flex shadow-2xl">
             <div class="p-6 text-2xl font-black border-b border-slate-800 flex flex-col gap-1">
                 <span class="text-yellow-500 italic leading-none">TOP SPEED</span>
@@ -40,6 +52,9 @@
                 </button>
                 <button onclick="showSection('drivers')" class="w-full flex items-center p-3 hover:bg-slate-800 rounded-xl transition text-slate-300 font-bold">
                     <i class="fas fa-id-card ml-3 text-slate-500"></i> إضافة مناديب
+                </button>
+                <button onclick="TopSpeedDB.clear()" class="w-full flex items-center p-3 hover:bg-red-900/30 text-red-400 rounded-xl transition font-bold mt-auto">
+                    <i class="fas fa-trash-alt ml-3"></i> تصفير البيانات
                 </button>
             </nav>
         </aside>
@@ -55,13 +70,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="text-left">
-                    <h1 class="text-xl font-black text-slate-800 italic uppercase">Top speed</h1>
+                <div class="flex md:hidden gap-2">
+                    <button onclick="showSection('orders')" class="p-2 text-slate-600"><i class="fas fa-list-ul fa-lg"></i></button>
+                    <button onclick="showSection('drivers')" class="p-2 text-slate-600"><i class="fas fa-users fa-lg"></i></button>
+                </div>
+                <div class="text-left hidden sm:block">
+                    <h1 class="text-xl font-black text-slate-800 italic uppercase tracking-tighter">Top speed</h1>
                 </div>
             </header>
 
-            <section id="ordersSection" class="p-6 space-y-6 overflow-y-auto h-full">
-                <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 grid grid-cols-1 md:grid-cols-4 gap-4 items-end">
+            <section id="ordersSection" class="p-4 md:p-6 space-y-6 overflow-y-auto h-full">
+                <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 items-end">
                     <div>
                         <label class="block text-xs font-black text-slate-500 mb-1 italic">المطعم</label>
                         <input type="text" id="restName" placeholder="اسم المطعم.." class="w-full p-3 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none">
@@ -72,14 +91,13 @@
                     </div>
                     <div>
                         <label class="block text-xs font-black text-slate-500 mb-1 italic">المندوب</label>
-                        <select id="driverSelect" class="w-full p-3 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none font-bold">
-                        </select>
+                        <select id="driverSelect" class="w-full p-3 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none font-bold"></select>
                     </div>
                     <button onclick="addNewOrder()" class="bg-[#0f172a] text-white py-3.5 rounded-xl font-black hover:bg-blue-600 transition shadow-xl">إضافة الأوردر</button>
                 </div>
 
-                <div class="bg-white rounded-2xl shadow-sm border border-gray-200 overflow-hidden">
-                    <table class="w-full text-right">
+                <div class="bg-white rounded-2xl shadow-sm border border-gray-200 overflow-hidden table-container">
+                    <table class="w-full text-right min-w-[600px]">
                         <thead class="bg-slate-50 text-slate-400 border-b">
                             <tr>
                                 <th class="p-4 text-[10px] font-black italic">المطعم</th>
@@ -94,7 +112,7 @@
                 </div>
             </section>
 
-            <section id="driversSection" class="p-6 hidden overflow-y-auto h-full">
+            <section id="driversSection" class="p-4 md:p-6 hidden overflow-y-auto h-full">
                 <div class="max-w-4xl mx-auto space-y-6">
                     <h2 class="text-xl font-black text-slate-800 border-r-4 border-blue-600 pr-3">إدارة فريق المناديب</h2>
                     <div class="bg-white p-6 rounded-2xl border-2 border-dashed grid grid-cols-1 md:grid-cols-3 gap-4 items-end text-right">
@@ -108,19 +126,15 @@
                         </div>
                         <button onclick="addNewDriver()" class="bg-green-600 text-white py-3 rounded-xl font-bold hover:bg-green-700">حفظ المندوب</button>
                     </div>
-                    <div id="driversGrid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+                    <div id="driversGrid" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
                 </div>
             </section>
         </main>
     </div>
-<script src="auth.js"></script>
+
     <script src="database.js"></script>
+    <script src="auth.js"></script>
     <script src="api-bridge.js"></script>
-
     <script src="script.js"></script> 
-</body>
-</html>
-
-    <script src="script.js"></script>
 </body>
 </html>
