--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             .table-container { overflow-x: auto; }
             aside { display: none; }
         }
-        .status-done { background-color: #dcfce7; color: #166534; font-weight: 900; }
-        .status-pending { background-color: #fef9c3; color: #854d0e; font-weight: 900; }
+        .status-done { background-color: #dcfce7 !important; color: #166534 !important; font-weight: 900; }
+        .status-pending { background-color: #fef9c3 !important; color: #854d0e !important; font-weight: 900; }
     </style>
 </head>
 <body class="overflow-hidden">
@@ -72,30 +72,30 @@
                     </div>
                 </div>
                 <div class="flex md:hidden gap-4">
-                     <button onclick="showSection('orders')"><i class="fas fa-list-check text-slate-600 fa-lg"></i></button>
-                     <button onclick="showSection('drivers')"><i class="fas fa-user-plus text-slate-600 fa-lg"></i></button>
+                     <button onclick="showSection('orders')" class="p-2 bg-slate-100 rounded-lg"><i class="fas fa-list-check text-slate-600"></i></button>
+                     <button onclick="showSection('drivers')" class="p-2 bg-slate-100 rounded-lg"><i class="fas fa-user-plus text-slate-600"></i></button>
                 </div>
             </header>
 
             <section id="ordersSection" class="p-4 md:p-6 space-y-6 overflow-y-auto h-full">
                 <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4 items-end">
                     <div>
-                        <label class="block text-xs font-black text-slate-500 mb-1">المطعم</label>
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المطعم</label>
                         <input type="text" id="restName" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                     <div>
-                        <label class="block text-xs font-black text-slate-500 mb-1">العنوان (مفصل أو لوكيشن)</label>
-                        <input type="text" id="orderAddress" placeholder="المنطقة - الشارع - رقم العقار" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500">
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">العنوان (سيظهر كخريطة)</label>
+                        <input type="text" id="orderAddress" placeholder="المنطقة - الشارع .." class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                     <div>
-                        <label class="block text-xs font-black text-slate-500 mb-1">المبلغ</label>
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المبلغ</label>
                         <input type="number" id="orderPrice" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                     <div>
-                        <label class="block text-xs font-black text-slate-500 mb-1">المندوب</label>
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المندوب</label>
                         <select id="driverSelect" class="w-full p-3 bg-slate-50 border rounded-xl outline-none font-bold"></select>
                     </div>
-                    <button onclick="addNewOrder()" class="bg-[#0f172a] text-white py-3.5 rounded-xl font-black hover:bg-blue-600 transition shadow-xl">تأكيد الأوردر</button>
+                    <button onclick="addNewOrder()" class="bg-[#0f172a] text-white py-3.5 rounded-xl font-black hover:bg-blue-600 transition shadow-xl">إرسال للمندوب</button>
                 </div>
 
                 <div class="bg-white rounded-2xl shadow-sm border border-gray-200 overflow-hidden table-container">
@@ -117,16 +117,16 @@
             <section id="driversSection" class="p-4 md:p-6 hidden overflow-y-auto h-full">
                 <div class="max-w-4xl mx-auto space-y-6">
                     <h2 class="text-xl font-black text-slate-800 border-r-4 border-blue-600 pr-3">إدارة فريق المناديب</h2>
-                    <div class="bg-white p-6 rounded-2xl border-2 border-dashed grid grid-cols-1 md:grid-cols-3 gap-4 items-end text-right">
+                    <div class="bg-white p-6 rounded-2xl border-2 border-dashed grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
                         <div>
                             <label class="block text-xs font-bold mb-1 text-slate-500">اسم المندوب</label>
-                            <input type="text" id="newDriverName" class="w-full p-3 bg-gray-50 border rounded-xl">
+                            <input type="text" id="newDriverName" class="w-full p-3 bg-gray-50 border rounded-xl outline-none">
                         </div>
                         <div>
-                            <label class="block text-xs font-bold mb-1 text-slate-500">كود المندوب (للدخول)</label>
-                            <input type="text" id="newDriverCode" class="w-full p-3 bg-gray-50 border rounded-xl">
+                            <label class="block text-xs font-bold mb-1 text-slate-500">كود الدخول (API Code)</label>
+                            <input type="text" id="newDriverCode" class="w-full p-3 bg-gray-50 border rounded-xl outline-none">
                         </div>
-                        <button onclick="addNewDriver()" class="bg-green-600 text-white py-3 rounded-xl font-bold hover:bg-green-700 transition">إضافة المندوب</button>
+                        <button onclick="addNewDriver()" class="bg-green-600 text-white py-3 rounded-xl font-bold hover:bg-green-700 transition">تفعيل المندوب</button>
                     </div>
                     <div id="driversGrid" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
                 </div>
@@ -135,9 +135,8 @@
     </div>
 
     <script src="database.js"></script>
-    <script src="auth.js"></script>
     <script src="api-bridge.js"></script>
+    <script src="auth.js"></script>
     <script src="script.js"></script> 
 </body>
 </html>
-
