--- a/index.html
+++ b/index.html
@@ -29,15 +29,10 @@
 <body class="overflow-hidden">
 
     <div id="loaderWrapper" class="fixed inset-0 z-50 flex flex-col justify-center items-center bg-[#050505]">
-        <div class="grid-overlay"></div>
-        <div class="loader-container">
-            <div class="spinner-box">
-                <div class="circle-border ring-1"></div>
-                <div class="circle-border ring-2"></div>
-                <div class="circle-border ring-3"></div>
-                <div class="percentage" id="counter">0%</div>
-                <div class="status-text" id="status">Top Speed System...</div>
-            </div>
+        <div class="loader-container text-center text-white">
+            <div class="text-4xl font-black text-yellow-500 mb-2 italic">TOP SPEED</div>
+            <div class="text-2xl font-bold mb-4" id="counter">0%</div>
+            <div class="text-slate-500 text-sm tracking-widest uppercase">System Initializing...</div>
         </div>
     </div>
 
@@ -48,13 +43,13 @@
                 <span class="text-[10px] text-slate-500 tracking-[0.2em] font-bold uppercase">Admin Panel</span>
             </div>
             <nav class="flex-1 p-4 space-y-3">
-                <button onclick="showSection('orders')" class="w-full flex items-center p-3 bg-blue-600 rounded-xl transition shadow-lg font-bold">
+                <button onclick="showSection('orders')" class="w-full flex items-center p-3 bg-blue-600 rounded-xl transition shadow-lg font-bold text-right">
                     <i class="fas fa-layer-group ml-3 text-blue-200"></i> لوحة الطلبات
                 </button>
-                <button onclick="showSection('drivers')" class="w-full flex items-center p-3 hover:bg-slate-800 rounded-xl transition text-slate-300 font-bold">
+                <button onclick="showSection('drivers')" class="w-full flex items-center p-3 hover:bg-slate-800 rounded-xl transition text-slate-300 font-bold text-right">
                     <i class="fas fa-id-card ml-3 text-slate-500"></i> إدارة المناديب
                 </button>
-                <button onclick="TopSpeedDB.clear()" class="w-full flex items-center p-3 hover:bg-red-900/30 text-red-400 rounded-xl transition font-bold mt-auto">
+                <button onclick="TopSpeedDB.clear()" class="w-full flex items-center p-3 hover:bg-red-900/30 text-red-400 rounded-xl transition font-bold mt-auto text-right">
                     <i class="fas fa-trash-alt ml-3"></i> تصفير النظام
                 </button>
             </nav>
@@ -81,19 +76,19 @@
                 <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4 items-end">
                     <div>
                         <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المطعم</label>
-                        <input type="text" id="restName" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500">
+                        <input type="text" id="restName" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
                     </div>
                     <div>
-                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">العنوان (سيظهر كخريطة)</label>
-                        <input type="text" id="orderAddress" placeholder="المنطقة - الشارع .." class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500">
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">العنوان</label>
+                        <input type="text" id="orderAddress" placeholder="المنطقة - الشارع .." class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
                     </div>
                     <div>
                         <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المبلغ</label>
-                        <input type="number" id="orderPrice" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500">
+                        <input type="number" id="orderPrice" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
                     </div>
                     <div>
                         <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المندوب</label>
-                        <select id="driverSelect" class="w-full p-3 bg-slate-50 border rounded-xl outline-none font-bold"></select>
+                        <select id="driverSelect" class="w-full p-3 bg-slate-50 border rounded-xl outline-none font-bold text-sm"></select>
                     </div>
                     <button onclick="addNewOrder()" class="bg-[#0f172a] text-white py-3.5 rounded-xl font-black hover:bg-blue-600 transition shadow-xl">إرسال للمندوب</button>
                 </div>
@@ -116,15 +111,15 @@
 
             <section id="driversSection" class="p-4 md:p-6 hidden overflow-y-auto h-full">
                 <div class="max-w-4xl mx-auto space-y-6">
-                    <h2 class="text-xl font-black text-slate-800 border-r-4 border-blue-600 pr-3">إدارة فريق المناديب</h2>
-                    <div class="bg-white p-6 rounded-2xl border-2 border-dashed grid grid-cols-1 md:grid-cols-3 gap-4 items-end">
+                    <h2 class="text-xl font-black text-slate-800 border-r-4 border-blue-600 pr-3 text-right">إدارة فريق المناديب</h2>
+                    <div class="bg-white p-6 rounded-2xl border-2 border-dashed grid grid-cols-1 md:grid-cols-3 gap-4 items-end text-right">
                         <div>
                             <label class="block text-xs font-bold mb-1 text-slate-500">اسم المندوب</label>
-                            <input type="text" id="newDriverName" class="w-full p-3 bg-gray-50 border rounded-xl outline-none">
+                            <input type="text" id="newDriverName" class="w-full p-3 bg-gray-50 border rounded-xl outline-none text-sm">
                         </div>
                         <div>
                             <label class="block text-xs font-bold mb-1 text-slate-500">كود الدخول (API Code)</label>
-                            <input type="text" id="newDriverCode" class="w-full p-3 bg-gray-50 border rounded-xl outline-none">
+                            <input type="text" id="newDriverCode" class="w-full p-3 bg-gray-50 border rounded-xl outline-none text-sm">
                         </div>
                         <button onclick="addNewDriver()" class="bg-green-600 text-white py-3 rounded-xl font-bold hover:bg-green-700 transition">تفعيل المندوب</button>
                     </div>
@@ -134,6 +129,6 @@
         </main>
     </div>
 
-    
+    <script src="script.js"></script> 
 </body>
-                    </html>
+</html>
