--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
             .table-container { overflow-x: auto; }
             aside { display: none; }
         }
-        .status-done { background-color: #dcfce7 !important; color: #166534 !important; font-weight: 900; }
-        .status-pending { background-color: #fef9c3 !important; color: #854d0e !important; font-weight: 900; }
+        /* تأثيرات الحالة للمناديب */
+        .badge-available { background-color: #dcfce7; color: #166534; }
+        .badge-busy { background-color: #fee2e2; color: #991b1b; }
     </style>
 </head>
 <body class="overflow-hidden">
 
     <div id="loaderWrapper" class="fixed inset-0 z-50 flex flex-col justify-center items-center bg-[#050505]">
         <div class="loader-container text-center text-white">
-            <div class="text-4xl font-black text-yellow-500 mb-2 italic">TOP SPEED</div>
+            <div class="text-4xl font-black text-yellow-500 mb-2 italic uppercase">Top Speed</div>
             <div class="text-2xl font-bold mb-4" id="counter">0%</div>
-            <div class="text-slate-500 text-sm tracking-widest uppercase">System Initializing...</div>
+            <div class="text-slate-500 text-[10px] tracking-[0.3em] uppercase">Initializing Logistics System</div>
         </div>
     </div>
 
@@ -49,7 +50,7 @@
                 <button onclick="showSection('drivers')" class="w-full flex items-center p-3 hover:bg-slate-800 rounded-xl transition text-slate-300 font-bold text-right">
                     <i class="fas fa-id-card ml-3 text-slate-500"></i> إدارة المناديب
                 </button>
-                <button onclick="TopSpeedDB.clear()" class="w-full flex items-center p-3 hover:bg-red-900/30 text-red-400 rounded-xl transition font-bold mt-auto text-right">
+                <button onclick="TopSpeedDB.clear()" class="w-full flex items-center p-3 hover:bg-red-900/30 text-red-400 rounded-xl transition font-bold mt-auto text-right border border-red-900/50">
                     <i class="fas fa-trash-alt ml-3"></i> تصفير النظام
                 </button>
             </nav>
@@ -66,42 +67,61 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex md:hidden gap-4">
-                     <button onclick="showSection('orders')" class="p-2 bg-slate-100 rounded-lg"><i class="fas fa-list-check text-slate-600"></i></button>
-                     <button onclick="showSection('drivers')" class="p-2 bg-slate-100 rounded-lg"><i class="fas fa-user-plus text-slate-600"></i></button>
+                <div class="flex md:hidden gap-2">
+                     <button onclick="showSection('orders')" class="p-3 bg-slate-100 rounded-xl"><i class="fas fa-list-check text-slate-600"></i></button>
+                     <button onclick="showSection('drivers')" class="p-3 bg-slate-100 rounded-xl"><i class="fas fa-user-plus text-slate-600"></i></button>
                 </div>
             </header>
 
             <section id="ordersSection" class="p-4 md:p-6 space-y-6 overflow-y-auto h-full">
-                <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-4 items-end">
+                <div class="bg-white p-6 rounded-2xl shadow-sm border border-gray-100 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 items-end text-right">
                     <div>
-                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المطعم</label>
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المطعم / المحل</label>
                         <input type="text" id="restName" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
                     </div>
                     <div>
-                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">العنوان</label>
-                        <input type="text" id="orderAddress" placeholder="المنطقة - الشارع .." class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">نوع الأوردر</label>
+                        <input type="text" id="orderType" placeholder="أكل، طرد.." class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
+                    </div>
+                    <div>
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">اسم العميل</label>
+                        <input type="text" id="customerName" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
+                    </div>
+                    <div>
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">تليفون العميل</label>
+                        <input type="tel" id="customerPhone" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
+                    </div>
+                    <div class="lg:col-span-2">
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">العنوان بالتفصيل</label>
+                        <input type="text" id="orderAddress" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
                     </div>
                     <div>
                         <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المبلغ</label>
-                        <input type="number" id="orderPrice" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm">
+                        <input type="number" id="orderPrice" class="w-full p-3 bg-slate-50 border rounded-xl outline-none focus:ring-2 focus:ring-blue-500 text-sm font-bold">
                     </div>
                     <div>
-                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">المندوب</label>
+                        <label class="block text-[10px] font-black text-slate-400 mb-1 uppercase">اختيار المندوب</label>
                         <select id="driverSelect" class="w-full p-3 bg-slate-50 border rounded-xl outline-none font-bold text-sm"></select>
                     </div>
-                    <button onclick="addNewOrder()" class="bg-[#0f172a] text-white py-3.5 rounded-xl font-black hover:bg-blue-600 transition shadow-xl">إرسال للمندوب</button>
+                    <button onclick="addNewOrder()" class="bg-[#0f172a] text-white py-3.5 rounded-xl font-black hover:bg-blue-600 transition shadow-xl lg:col-span-4 flex justify-center items-center gap-2">
+                        إرسال للمندوب واتساب <i class="fab fa-whatsapp text-lg"></i>
+                    </button>
+                </div>
+
+                <div class="flex justify-between items-center bg-slate-100 p-4 rounded-2xl border border-slate-200">
+                    <span class="text-xs font-black text-slate-600"><i class="fas fa-filter ml-2"></i> تصفية الطلبات:</span>
+                    <select id="filterDriver" onchange="renderAll()" class="bg-white border rounded-lg px-4 py-2 text-xs font-bold outline-none"></select>
                 </div>
 
                 <div class="bg-white rounded-2xl shadow-sm border border-gray-200 overflow-hidden table-container">
-                    <table class="w-full text-right min-w-[800px]">
+                    <table class="w-full text-right min-w-[900px]">
                         <thead class="bg-slate-50 text-slate-400 border-b">
                             <tr>
-                                <th class="p-4 text-[10px] font-black uppercase">المطعم</th>
-                                <th class="p-4 text-[10px] font-black uppercase">العنوان والموقع</th>
+                                <th class="p-4 text-[10px] font-black uppercase">التفاصيل</th>
+                                <th class="p-4 text-[10px] font-black uppercase">العميل والعنوان</th>
                                 <th class="p-4 text-[10px] font-black uppercase">المبلغ</th>
                                 <th class="p-4 text-[10px] font-black uppercase">المندوب</th>
-                                <th class="p-4 text-[10px] font-black uppercase text-center">الحالة</th>
+                                <th class="p-4 text-[10px] font-black uppercase text-center">الإجراءات</th>
                             </tr>
                         </thead>
                         <tbody id="ordersTableBody"></tbody>
@@ -110,20 +130,25 @@
             </section>
 
             <section id="driversSection" class="p-4 md:p-6 hidden overflow-y-auto h-full">
-                <div class="max-w-4xl mx-auto space-y-6">
+                <div class="max-w-5xl mx-auto space-y-6">
                     <h2 class="text-xl font-black text-slate-800 border-r-4 border-blue-600 pr-3 text-right">إدارة فريق المناديب</h2>
-                    <div class="bg-white p-6 rounded-2xl border-2 border-dashed grid grid-cols-1 md:grid-cols-3 gap-4 items-end text-right">
+                    <div class="bg-white p-6 rounded-2xl border-2 border-dashed grid grid-cols-1 md:grid-cols-4 gap-4 items-end text-right">
                         <div>
                             <label class="block text-xs font-bold mb-1 text-slate-500">اسم المندوب</label>
                             <input type="text" id="newDriverName" class="w-full p-3 bg-gray-50 border rounded-xl outline-none text-sm">
                         </div>
                         <div>
-                            <label class="block text-xs font-bold mb-1 text-slate-500">كود الدخول (API Code)</label>
+                            <label class="block text-xs font-bold mb-1 text-slate-500">رقم واتساب المندوب</label>
+                            <input type="tel" id="newDriverPhone" placeholder="010..." class="w-full p-3 bg-gray-50 border rounded-xl outline-none text-sm text-right">
+                        </div>
+                        <div>
+                            <label class="block text-xs font-bold mb-1 text-slate-500">كود الدخول</label>
                             <input type="text" id="newDriverCode" class="w-full p-3 bg-gray-50 border rounded-xl outline-none text-sm">
                         </div>
                         <button onclick="addNewDriver()" class="bg-green-600 text-white py-3 rounded-xl font-bold hover:bg-green-700 transition">تفعيل المندوب</button>
                     </div>
-                    <div id="driversGrid" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
+                    
+                    <div id="driversGrid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 text-right"></div>
                 </div>
             </section>
         </main>
